tests/typechecker/should_fail/type_annotations_12.csp
f19 :: (a1, a1) -> Bool
f19(x, y) = x == y
